@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * using rucio API for file registration
   * fixed rebro for jobDef=0
   * fixed rebro for defined
   * changed TA to take secondary volume into account
